; ModuleID = '/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmtksdio.c_btmtksdio_func_query.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmtksdio.c_btmtksdio_func_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }
%struct.btmtk_hci_wmt_params = type { i32, i32, i32*, i32*, i32 }

@MTK_WMT_FUNC_CTRL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Failed to query function status (%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_dev*)* @btmtksdio_func_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btmtksdio_func_query(%struct.hci_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hci_dev*, align 8
  %4 = alloca %struct.btmtk_hci_wmt_params, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.hci_dev* %0, %struct.hci_dev** %3, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* @MTK_WMT_FUNC_CTRL, align 4
  %9 = getelementptr inbounds %struct.btmtk_hci_wmt_params, %struct.btmtk_hci_wmt_params* %4, i32 0, i32 4
  store i32 %8, i32* %9, align 8
  %10 = getelementptr inbounds %struct.btmtk_hci_wmt_params, %struct.btmtk_hci_wmt_params* %4, i32 0, i32 0
  store i32 4, i32* %10, align 8
  %11 = getelementptr inbounds %struct.btmtk_hci_wmt_params, %struct.btmtk_hci_wmt_params* %4, i32 0, i32 1
  store i32 4, i32* %11, align 4
  %12 = getelementptr inbounds %struct.btmtk_hci_wmt_params, %struct.btmtk_hci_wmt_params* %4, i32 0, i32 3
  store i32* %7, i32** %12, align 8
  %13 = getelementptr inbounds %struct.btmtk_hci_wmt_params, %struct.btmtk_hci_wmt_params* %4, i32 0, i32 2
  store i32* %5, i32** %13, align 8
  %14 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %15 = call i32 @mtk_hci_wmt_sync(%struct.hci_dev* %14, %struct.btmtk_hci_wmt_params* %4)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %1
  %19 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @bt_dev_err(%struct.hci_dev* %19, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %1
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %18
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @mtk_hci_wmt_sync(%struct.hci_dev*, %struct.btmtk_hci_wmt_params*) #1

declare dso_local i32 @bt_dev_err(%struct.hci_dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
